--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Gallery</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">Portfolio</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -136,7 +136,7 @@
 
             <!--===== WORK =====-->
             <section class="work section" id="work">
-                <h2 class="section-title">Gallery</h2>
+                <h2 class="section-title">Portfolio</h2>
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
