--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <button  type="submit" class="contact__button button" >
-                    <a style="text-decoration: none; color: white;" href="https://www.facebook.com/i.will.make.the.onion.cry/" >More</a></button>
+                    <a style="text-decoration: none; color: white;" href="index2.html" >More</a></button>
             </section>
 
             <!--===== CONTACT =====-->
@@ -167,11 +167,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form" >
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" placeholder="Feedback" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="submit" value="Send" class="contact__button button">
+                    <form action="contact.php" method="post" class="contact__form" >
+                        <input name="name" type="text" placeholder="Name" class="contact__input">
+                        <input name="mail" type="mail" placeholder="Email" class="contact__input">
+                        <textarea name="message" placeholder="Feedback" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="submit" name="submit"value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
