--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="https://www.facebook.com/" method="post" class="contact__form" >
+                    <form action="https://getform.io/f/945779a3-681a-4b4f-80bd-09825ea016d4" method="post" class="contact__form" >
                         <input name="name" type="text" placeholder="Name" class="contact__input">
                         <input name="mail" type="mail" placeholder="Email" class="contact__input">
                         <textarea name="message" placeholder="Feedback" id="" cols="0" rows="10" class="contact__input"></textarea>
