--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
             </section>
 
-            <!--===== WORK =====-->
+            <!--===== Portfolio =====-->
             <section class="work section" id="work">
                 <h2 class="section-title">Portfolio</h2>
 
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <button  type="submit" class="contact__button button" >
-                    <a style="text-decoration: none; color: white;" href="index2.html" >More</a></button>
+                    <a style="text-decoration: none; color: white;" href="https://www.facebook.com/i.will.make.the.onion.cry/photos_by" >More</a></button>
             </section>
 
             <!--===== CONTACT =====-->
