--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="work1.jpg" alt="">
                     </div>
                     <div class="work__img">
                         <img src="assets/img/ss.jpg" alt="">
