--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
                         <img src="work1.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/ss.jpg" alt="">
+                        <img src="work2.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work3.jpeg" alt="">
+                        <img src="work3.jpeg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work4.jpeg" alt="">
+                        <img src="work4.jpeg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work5.jpeg" alt="">
+                        <img src="work5.jpeg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="work6.jpg" alt="">
                     </div>
                 </div>
                 <button  type="submit" class="contact__button button" >
