--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="work1.jpg" alt="">
+                        <img src="Work1.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="work2.jpg" alt="">
+                        <img src="Work2.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="work3.jpeg" alt="">
+                        <img src="Work3.jpeg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="work4.jpeg" alt="">
+                        <img src="Work4.jpeg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="work5.jpeg" alt="">
+                        <img src="Work5.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="work6.jpg" alt="">
+                        <img src="Work6.jpg" alt="">
                     </div>
                 </div>
                 <button  type="submit" class="contact__button button" >
