--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.facebook.com/i.will.make.the.onion.cry/" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100074610071673" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/san.tosh_713/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
                 </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <button  type="submit" class="contact__button button" >
-                    <a style="text-decoration: none; color: white;" href="https://www.facebook.com/i.will.make.the.onion.cry/photos_by" >More</a></button>
+                    <a style="text-decoration: none; color: white;" href="https://www.facebook.com/profile.php?id=100074610071673" >More</a></button>
             </section>
 
             <!--===== CONTACT =====-->
