--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <a href="" class="footer__icon"><i class='bx bx-phone'></i>9813866669</a>
             </div>
             </div>
-            <p>&#169; 2020 copyright all right reserved</p>
+            <p>&#169; santosh 2021 copyright all right reserved</p>
         </footer>
 
 
