--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Santosh</span><br> Web Designer</h1>
+                    <h1 class="home__title">HI,<br>I'am <span class="home__title-color">Santosh</span><br> Web Designer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
@@ -179,7 +179,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Santosh</p>
+            <p class="footer__title">Nepali honi😁</p>
             <div class="footer__social">
               <h3>contact via</h3>
                 <a href="https://www.facebook.com/i.will.make.the.onion.cry/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
